--- a/index.html
+++ b/index.html
@@ -195,7 +195,17 @@
 </div>
 
 
-
+<footer class="footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <div class="foot-start">
+          
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
