--- a/index.html
+++ b/index.html
@@ -200,7 +200,19 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="foot-start">
-          
+          <img src="image/logo.png" class="img-fluid">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
+
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="foot-mid">
+          <h3>Quick Link</h3>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="foot-end">
+          <h3>Contact Details</h3>
         </div>
       </div>
     </div>
