--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     <div class="row">
       <div class="col-sm-4">
         <div class="foot-start">
-          <img src="image/logo.png" class="img-fluid">
+          <img src="image/logo.png" class="img-fluid" width="180px">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 
         </div>
