--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   <p>Resize this responsive page to see the effect!</p> 
 </div>
   
-<div class="container mt-5">
+<div class="container mt-5 mb-5">
   <div class="row">
     <div class="col-sm-4">
       <h3>Column 1</h3>
