--- a/index.html
+++ b/index.html
@@ -198,21 +198,73 @@
 <footer class="footer">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <div class="foot-start">
-          <img src="image/logo.png" class="img-fluid" width="140px">
+          <img src="image/logo.png" class="img-fluid" width="120px">
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
 
         </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-3">
         <div class="foot-mid">
           <h3>Quick Link</h3>
+          <nav class="navbar">
+            <div class="container-fluid">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Gallery</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contact</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
         </div>
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-3">
+        <div class="foot-mid2">
+          <h3>Services Link</h3>
+          <nav class="navbar">
+            <div class="container-fluid">
+              <ul class="navbar-nav ul-style">
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Service1</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Service2</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Service3</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+      </div>
+      <div class="col-sm-3">
         <div class="foot-end">
           <h3>Contact Details</h3>
+            <ul class="ul-style">
+              <li class="li-style">
+                <a class="a-style" href="#">Call Us: </a>
+                <a class="a-style2" href="#">8003888090</a>
+              </li>
+              <li class="li-style">
+                <a class="a-style" href="#">Address: </a>
+                <a class="a-style2" href="#"> 58 Howard Street #2 San Francisco </a>
+              </li>
+              <li class="li-style">
+                <a class="a-style" href="#">Email Us: </a>
+                <a class="a-style2" href="#"> contact@html.com </a>
+              </li>
+            </ul>
         </div>
       </div>
     </div>
